Thesis/ws/log/build_2023-04-13_13-33-09/locomotion_core/stdout_stderr.log
running egg_info
writing ../../build/locomotion_core/locomotion_core.egg-info/PKG-INFO
writing dependency_links to ../../build/locomotion_core/locomotion_core.egg-info/dependency_links.txt
writing entry points to ../../build/locomotion_core/locomotion_core.egg-info/entry_points.txt
writing requirements to ../../build/locomotion_core/locomotion_core.egg-info/requires.txt
writing top-level names to ../../build/locomotion_core/locomotion_core.egg-info/top_level.txt
reading manifest file '../../build/locomotion_core/locomotion_core.egg-info/SOURCES.txt'
writing manifest file '../../build/locomotion_core/locomotion_core.egg-info/SOURCES.txt'
running build
running build_py
copying locomotion_core/movebase_core.py -> /home/vboxuser/ws/build/locomotion_core/build/lib/locomotion_core
copying locomotion_core/cmd_roboteq.py -> /home/vboxuser/ws/build/locomotion_core/build/lib/locomotion_core
running install
running install_lib
copying /home/vboxuser/ws/build/locomotion_core/build/lib/locomotion_core/movebase_core.py -> /home/vboxuser/ws/install/locomotion_core/lib/python3.10/site-packages/locomotion_core
copying /home/vboxuser/ws/build/locomotion_core/build/lib/locomotion_core/cmd_roboteq.py -> /home/vboxuser/ws/install/locomotion_core/lib/python3.10/site-packages/locomotion_core
byte-compiling /home/vboxuser/ws/install/locomotion_core/lib/python3.10/site-packages/locomotion_core/movebase_core.py to movebase_core.cpython-310.pyc
byte-compiling /home/vboxuser/ws/install/locomotion_core/lib/python3.10/site-packages/locomotion_core/cmd_roboteq.py to cmd_roboteq.cpython-310.pyc
running install_data
  File "/home/vboxuser/ws/install/locomotion_core/lib/python3.10/site-packages/locomotion_core/cmd_roboteq.py", line 19
    global inCmd
    ^^^^^^^^^^^^
SyntaxError: name 'inCmd' is assigned to before global declaration

running install_egg_info
removing '/home/vboxuser/ws/install/locomotion_core/lib/python3.10/site-packages/locomotion_core-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/locomotion_core/locomotion_core.egg-info to /home/vboxuser/ws/install/locomotion_core/lib/python3.10/site-packages/locomotion_core-0.0.0-py3.10.egg-info
running install_scripts
Installing cmd_roboteq script to /home/vboxuser/ws/install/locomotion_core/lib/locomotion_core
Installing drive_selector script to /home/vboxuser/ws/install/locomotion_core/lib/locomotion_core
Installing movebase_core script to /home/vboxuser/ws/install/locomotion_core/lib/locomotion_core
writing list of installed files to '/home/vboxuser/ws/build/locomotion_core/install.log'
